// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client-js"
}

generator dbml{
  provider = "prisma-dbml-generator"
  output = "./dbml"
}

datasource db {
  provider = "postgresql"
}

enum ChatType{
  private
  group
}

enum Role{
  owner
  admin
  member
}

model User{
  id String @id @default(uuid())
  username String
  phone String? @unique
  email String? @unique
  profile String?
  password String
  created_at DateTime @default(now())
  refresh_token String?
  member ChatMember[]
  message Message[]
  media Media[]
  contact Contact[] @relation("contact")
  contactOf Contact[] @relation("contactOf")
  
  @@index([id])
}


model Contact{
  id String @id @default(uuid())
  contactId String
  contactOfId String
  contact User @relation("contact",fields: [contactId], references: [id],onDelete: Cascade)
  contactOf User @relation("contactOf",fields: [contactOfId], references: [id],onDelete: Cascade)

  @@unique([contactId,contactOfId])
  @@index([contactId])
  @@index([contactOfId])

}

model Chat{
  id String @id @default(uuid())
  type ChatType @default(private)
  created_at DateTime @default(now())
  title String?
  profile String?
  member ChatMember[]
  message Message[]
  @@index([id])

}


model ChatMember{
  id String @id @default(uuid())
  role Role @default(member)
  joined_at DateTime @default(now())
  userId String
  chatId String
  user User @relation(fields: [userId], references: [id], onDelete: Cascade)
  chat Chat @relation(fields: [chatId], references: [id], onDelete: Cascade)
  @@index([id])
  @@unique([userId,chatId])
}

model Message{
  id String @id @default(uuid())
  chatId String
  senderId String
  message String?
  created DateTime @default(now())
  chat Chat @relation(fields: [chatId], references: [id], onDelete: Cascade)
  user User @relation(fields: [senderId], references: [id], onDelete: Cascade)
  media Media[]
  @@index([created])
  @@index([id])
}

model Media{
  id String @id @default(uuid())
  url String
  messageId String 
  message Message @relation(fields: [messageId], references: [id], onDelete: Cascade)
  senderId String
  sender User @relation(fields: [senderId], references: [id], onDelete: Cascade)
  created_at DateTime @default(now())
}

